# ibl-task

./: .gitignore  LICENSE  README.md  pyproject.toml
ibl/: __init__.py  calibrate.py  config.py  gui.py  io.py  task.py
scripts/: hw_sync_test.py
teensy/: teensy.ino
tools/: install_desktop_entry.py
