[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ibl-task"
version = "0.1.0"
description = "IBL trainingChoiceWorld task — POSTECH NCTRL implementation"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
    "psychopy",
    "pyserial",
    "numpy",
    "PyQt6",
    "pyqtgraph",
]

[project.scripts]
ibl = "ibl.gui:main"

[tool.setuptools.packages.find]
include = ["ibl*"]
